--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <header class="profile-header">
     <img src="profile.jpg" alt="Abhimanyu L R" class="profile-pic">
     <div>
-        <h1>Abhimanyu L R</h1>
+        <h1>BGAMS</h1>
         <p>ITI COPA Student</p>
     </div>
 </header>
@@ -34,7 +34,7 @@
 </section>
 
 <footer>
-    © 2025 Abhimanyu L R
+    © 2025 BGAMS
 </footer>
 
 </body>
