--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 
 <section>
     <p>
-        I am Abhimanyu L R, an ITI COPA student with a strong foundation in Computer Science.
+        I am BGAMS, an ITI COPA student with a strong foundation in Computer Science.
         I enjoy learning web development and building practical projects.
     </p>
     <p>
@@ -30,7 +30,8 @@
     </p>
 </section>
 
-<footer>© 2025 Abhimanyu L R</footer>
+<footer>© 2025 BGAMS</footer>
 
 </body>
 </html>
+
