--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,8 @@
     <p><strong>Email:</strong> shajqw@gmail.com</p>
 </section>
 
-<footer>© 2025 Abhimanyu L R</footer>
+<footer>© 2025 BGAMS</footer>
 
 </body>
 </html>
+
