--- a/projects.html
+++ b/projects.html
@@ -114,7 +114,7 @@
             <div class="carousel-container">
                 <img src="profile.jpg" class="carousel-image" alt="Mock Test Website Screenshot 1">
                 <img src="profile.jpg" class="carousel-image" alt="Mock Test Website Screenshot 2">
-                <img src="p.png" class="carousel-image" alt="Mock Test Website Screenshot 3">
+                <img src="profile.png" class="carousel-image" alt="Mock Test Website Screenshot 3">
             </div>
             <button class="prev">&#10094;</button>
             <button class="next">&#10095;</button>
@@ -193,3 +193,4 @@
 
 </body>
 </html>
+
