--- a/projects.html
+++ b/projects.html
@@ -207,13 +207,13 @@
                 <img src="HomePage.png" class="carousel-image" alt="Mock Test Website Screenshot 1">
                 <img src="HomePage1.png" class="carousel-image" alt="Mock Test Website Screenshot 2">
                 <img src="HomePage2.png" class="carousel-image" alt="Mock Test Website Screenshot 3">
-                <img src="TestPage.png" class="carousel-image" alt="Mock Test Website Screenshot 3">
-                <img src="ResultPage.png" class="carousel-image" alt="Mock Test Website Screenshot 3">
-                <img src="SignupPage.png" class="carousel-image" alt="Mock Test Website Screenshot 3">
-                <img src="LoginPage.png" class="carousel-image" alt="Mock Test Website Screenshot 3">
-                <img src="ForgotPage.png" class="carousel-image" alt="Mock Test Website Screenshot 3">
-                <img src="LeaderboardPage.png" class="carousel-image" alt="Mock Test Website Screenshot 3">
-                <img src="ContactPage.png" class="carousel-image" alt="Mock Test Website Screenshot 3">
+                <img src="TestPage.png" class="carousel-image" alt="Mock Test Website Screenshot 4">
+                <img src="ResultPage.png" class="carousel-image" alt="Mock Test Website Screenshot 5">
+                <img src="SignupPage.png" class="carousel-image" alt="Mock Test Website Screenshot 6">
+                <img src="LoginPage.png" class="carousel-image" alt="Mock Test Website Screenshot 7">
+                <img src="ForgotPage.png" class="carousel-image" alt="Mock Test Website Screenshot 8">
+                <img src="LeaderboardPage.png" class="carousel-image" alt="Mock Test Website Screenshot 9">
+                <img src="ContactPage.png" class="carousel-image" alt="Mock Test Website Screenshot 10">
 
             </div>
             <button class="prev">&#10094;</button>
@@ -221,7 +221,7 @@
         </div>
         <p>An online mock test website where users can attempt tests, submit answers, and view results.</p>
         <p><strong>Technologies:</strong> HTML, CSS, JavaScript, PHP, MySQL</p>
-        <a href="192.168.0.11/mocktest" target="_blank" class="btn">Live Demo</a>
+        <a href="https://testmaster.free.nf/index.php" target="_blank" class="btn">Live Demo</a>
     </div>
 
     <!-- Handmade Bag -->
@@ -384,4 +384,5 @@ modal.addEventListener("wheel", e => {
 </script>
 
 </body>
+
 </html>
